lookup table & SawWave

--- a/DAWStructure.ipynb
+++ b/DAWStructure.ipynb
@@ -122,12 +122,42 @@
     "            buffer[i] = math.sin(self.phi * 2 * math.pi)\n",
     "            self.phi += float(self.freq) / float(sr)\n",
     "            while self.phi > 1.0:\n",
-    "                self.phi -= 1.0"
+    "                self.phi -= 1.0\n",
+    "                \n",
+    "\"\"\"\n",
+    "    def makeSquareWaveAdditive(self, numHarmonics=10, buffer, amp=1, inSr):\n",
+    "        \n",
+    "        #replaced time with buffer\n",
+    "        #inSr is sample rate\n",
+    "        \n",
+    "        sqFreq = self.freq\n",
+    "        numSamples = int(time * inSr)\n",
+    "        sqLength = int(float(inSr) / float(sqFreq))\n",
+    "        amp = amp * 4 / math.pi\n",
+    "\n",
+    "        phis = np.zeros(numHarmonics)\n",
+    "        phiDeltas = np.zeros(numHarmonics)\n",
+    "        for i in range(numHarmonics):\n",
+    "            harmonicFreq = float(sqFreq) * (float(i) * 2 + 1)\n",
+    "            phiDeltas[i] = harmonicFreq / float(inSr)\n",
+    "\n",
+    "        tBuf = np.zeros(numSamples)\n",
+    "        buffer = np.zeros(numSamples)\n",
+    "        for i in range(numSamples):\n",
+    "            tBuf[i] = float(i) / float(inSr)\n",
+    "            for j in range(numHarmonics):\n",
+    "                buffer[i] += math.sin(2 * math.pi * phis[j]) * amp / (float(j) * 2 + 1)\n",
+    "                phis[j] += phiDeltas[j]\n",
+    "                while phis[j] >= 1:\n",
+    "                    phis[j] -= 1\n",
+    "\n",
+    "        return (tBuf, buffer)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +385,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
